modificado:     www/login.html

--- a/project_controls/www/login.html
+++ b/project_controls/www/login.html
@@ -18,8 +18,8 @@
 		</div>
 	</noscript>
 <section class='for-login'>
-       <div class="section-title" style="margin-top: 90px;">
-          <a href="home_es" class="logo mr-auto"><img src="/assets/project_controls/assets/images/logo-icon.png" width=" 90px" alt=""></a>
+       <div class="section-title text-center" style="margin-top: 90px;">
+          <a href="home" class="logo mr-auto"><img src="/assets/project_controls/assets/images/logo-icon.png" width=" 90px" alt=""></a>
           <h1 style="color: lightblue;">Web App PibiCo</h1>
         </div>  
   	<div class="login-content page-card" style="margin-top: -15px; background: transparent">
