modificado:     project_controls/www/login.html

--- a/project_controls/www/login.html
+++ b/project_controls/www/login.html
@@ -18,7 +18,7 @@
 		</div>
 	</noscript>
 <section class='for-login'>
-       <div class="section-title text-center" style="margin-top: 90px;">
+       <div class="section-title text-center mb-6" style="margin-top: 90px;">
           <a href="home" class="logo mr-auto"><img src="/assets/project_controls/assets/images/logo-icon.png" width=" 90px" alt=""></a>
           <h1 style="color: lightblue;">Web App PibiCo</h1>
         </div>  
