--- a/project_controls/www/404.html
+++ b/project_controls/www/404.html
@@ -16,10 +16,9 @@ html, body {
 {% include "templates/styles/card_style.css" %}
 </style>
 
-<div class="container-fluid" style="background-image: url('/assets/project_controls/assets/images/404-bg.png'); height: 100vh; margin-top: -50px;">
+<div class="container-fluid" style="background-image: url('/assets/images/404-bg.png'); height: 100vh; margin-top: -50px;">
   <div class="section-title">
-          <a href="home_es" class="logo mr-auto"><img src="/assets/project_controls/assets/images/logo-icon.png" width=" 90px" style="margin-top: 90px;" alt=""></a>
-          <h1 style="color: lightblue;">Web App PibiCo</h1>
+          <a href="home" class="logo mr-auto"><img src="/assets/images/logo-icon.png" width=" 90px" style="margin-top: 90px;" alt=""></a>
         </div> 
 
 <div class='page-card' style="margin-top: -15px; background: transparent;">
