modificado:     project_controls/www/login.html

--- a/project_controls/www/login.html
+++ b/project_controls/www/login.html
@@ -8,7 +8,7 @@
 
 {% block page_content %}
 <!-- {{ for_test }} -->
-<div class="container-fluid" style="background: #4682b462; height: 100vh; margin-top: -50px;">
+<div class="container-fluid" style="height: 100vh; margin-top: -50px;">
   
 <div style='min-height: 360px'>
 	<noscript>
